# python-poetry-production-level-repository-template

./: .pre-commit-config.yaml  .secrets.baseline  .tool-versions  LICENSE  README.md  pyproject.toml
scripts/: 01_config_ubuntu_env.sh  01_configurar_ambiente.sh  02_instalar_plugins_asdf.sh  02_install_asdf_plugins.sh  03_instalar_dependencias_projeto.sh  03_install_proj_dep.sh  04_requirements_txt_to_poetry(optional).sh  desinstalar_ambiente.sh  stuck_resolving_dependencies_fix.sh  uninstall_env.sh
