[tool.poetry]
name = "asdf-poetry-python-config"
version = "0.1.0"
description = ""
authors = ["Gustavo Oliveira <g.alvs.oliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
detect-secrets = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
